kubernetes/apps/paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/part-of: homelab
